--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			</div>
 			<div class="container"></br>
 				<p class="intro">
-					Lorem Khaled Ipsum is a major key to success. To succeed you must believe. When you believe, you will succeed. Mogul talk. Find peace, life is like a water fall, you’ve gotta flow. Lion! Fan luv. Eliptical talk.
+					I am an Undergraduate Student in the Department of Industrial and Systems Engineering, IIT Kharagpur with immense interest in Financial Markets and Machine Learning. I have experience of working as a Business Analyst intern at Tolaroid Technologies, Cairo Egypt. I enjoy working on challenging real life business cases and work as a part-time consultant at 180 degrees consulting. In my free time I like working on Alpha prediction and Algo-Trading strategies using Machine learning and Time Series Analysis with my peers at Quant Club.
 				</p>
 			</div>
 		</section>
